[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Wesker"
version = "0.1.0"
description = "In-process AST mutation testing for Python. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Rohan Vinaik" }]
keywords = ["mutation-testing", "testing", "ast", "code-quality", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
wesker = "Wesker.cli:main"

[project.urls]
Homepage = "https://github.com/rohanvinaik/Wesker"
Repository = "https://github.com/rohanvinaik/Wesker"

# Runtime is zero-dependency by design; the test framework is dev-only.
[dependency-groups]
dev = ["pytest>=7", "pytest-cov>=4"]

# Wesker profiles its own library core. CLI/entry/orchestration modules
# (cli, __main__, __init__, metrics) are excluded — they are thin dispatch,
# matching the coverage exclusions below.
[tool.wesker]
source_dir = "Wesker"
exclude = [
    "Wesker/cli.py",
    "Wesker/__main__.py",
    "Wesker/__init__.py",
    "Wesker/metrics.py",
]

[tool.coverage.run]
source = ["Wesker"]
omit = [
    "Wesker/cli.py",
    "Wesker/__main__.py",
    "Wesker/__init__.py",
    "Wesker/metrics.py",
]
